--- a/src/views/user/book-list.ejs
+++ b/src/views/user/book-list.ejs
@@ -9,7 +9,7 @@
 <html lang="en" class="no-js">
 <head>
 	<!-- Basic need -->
-	<title>Open Pediatrics</title>
+	<title><%- id? currentCategory.name: 'Thể loại' %></title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -46,10 +46,10 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="hero-ct">
-                            <h1> book listing - grid</h1>
+                            <h1> <%- id? currentCategory.name: 'Tất cả' %> </h1>
                             <ul class="breadcumb">
-                                <li class="active"><a href="#">Home</a></li>
-                                <li> <span class="ion-ios-arrow-right"></span> book listing</li>
+                                <li class="active"><a href="/">Trang chủ</a></li>
+                                <li> <span class="ion-ios-arrow-right"></span> Danh sách bài biết</li>
                             </ul>
                         </div>
                     </div>
@@ -61,25 +61,14 @@
                 <div class="row ipad-width">
                     <div class="col-md-8 col-sm-12 col-xs-12">
                         <div class="topbar-filter">
-                            <p>Found <span>1,608 books</span> in total</p>
-                            <label>Sort by:</label>
-                            <select>
-                                <option value="popularity">Popularity Descending</option>
-                                <option value="popularity">Popularity Ascending</option>
-                                <option value="rating">Rating Descending</option>
-                                <option value="rating">Rating Ascending</option>
-                                <option value="date">Release date Descending</option>
-                                <option value="date">Release date Ascending</option>
-                            </select>
-                            <a href="movielist.html" class="list"><i class="ion-ios-list-outline "></i></a>
-                            <a  href="moviegrid.html" class="grid"><i class="ion-grid active"></i></a>
+                            <p style="padding: 5px 0px">Tìm thấy <span><%- totalBooks %> </span> bài viết</p>
                         </div>
                         <div class="flex-wrap-movielist">
-                            <% books.forEach(book => { %>
+                            <% bookPage.data.forEach(book => { %>
                                 <div class="movie-item-style-2 movie-item-style-1">
                                     <img src="<%- book.image.small %> " alt="">
                                     <div class="hvr-inner">
-                                        <a  href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+                                        <a  href="moviesingle.html"> Xem thêm <i class="ion-android-arrow-dropright"></i> </a>
                                     </div>
                                     <div class="mv-item-infor">
                                         <h6><a href="#"><%- book.book_name %> </a></h6>
@@ -88,75 +77,38 @@
                                 </div>					
                             <% }) %>
                         </div>		
-                        <div class="topbar-filter">
-                            <label>Books per page:</label>
-                            <select>
-                                <option value="range">20 Books</option>
-                                <option value="saab">10 Books</option>
-                            </select>
-                            
-                            <div class="pagination2">
-                                <span>Page 1 of 2:</span>
-                                <a class="active" href="#">1</a>
-                                <a href="#">2</a>
-                                <a href="#">3</a>
-                                <a href="#">...</a>
-                                <a href="#">78</a>
-                                <a href="#">79</a>
-                                <a href="#"><i class="ion-arrow-right-b"></i></a>
-                            </div>
-                        </div>
+                        <%- include('layouts/pagination.ejs', {
+                            limitTitle: 'Bài viết',
+                            data: bookPage,
+                            pageLink: '/book/category'+(id && '?id='+id),
+                            title: 'Bài viết mỗi trang',
+                            isParam: true,
+                        }) %> 
                     </div>
                     <div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="sidebar">
                             <div class="searh-form">
-                                <h4 class="sb-title">Search for book</h4>
+                                <h4 class="sb-title">Tìm bài viết</h4>
                                 <form class="form-style-1" action="#">
                                     <div class="row">
                                         <div class="col-md-12 form-it">
-                                            <label>Book name</label>
-                                            <input type="text" placeholder="Enter keywords">
+                                            <label>Tên bài viết</label>
+                                            <input type="text" placeholder="Tên bài viết">
                                         </div>
                                         <div class="col-md-12 form-it">
-                                            <label>Genres & Subgenres</label>
+                                            <label>Thể loại</label>
                                             <div class="group-ip">
                                                 <select
-                                                    name="skills" multiple="" class="ui fluid dropdown">
-                                                    <option value="">Enter to filter genres</option>
-                                                    <option value="Action1">Action 1</option>
-                                                    <option value="Action2">Action 2</option>
-                                                    <option value="Action3">Action 3</option>
-                                                    <option value="Action4">Action 4</option>
-                                                    <option value="Action5">Action 5</option>
+                                                    name="id" multiple="" class="ui fluid dropdown">
+                                                    <option value="">Chọn thể loại</option>
+                                                    <% bookCategory.forEach(cate => { %>
+                                                        <option value="<%- cate._id %>"><%- cate.name %></option>
+                                                    <% }) %>
                                                 </select>
                                             </div>	
                                         </div>
-                                        <div class="col-md-12 form-it">
-                                            <label>Rating Range</label>
-                                            <select>
-                                              <option value="range">-- Select the rating range below --</option>
-                                              <option value="saab">-- Select the rating range below --</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-12 form-it">
-                                            <label>Release Year</label>
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <select>
-                                                      <option value="range">From</option>
-                                                      <option value="number">10</option>
-                                                    </select>
-                                                </div>
-                                                <div class="col-md-6">
-                                                    <select>
-                                                      <option value="range">To</option>
-                                                      <option value="number">20</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div class="col-md-12 ">
-                                            <input class="submit" type="submit" value="submit">
+                                            <input class="submit" type="submit" value="Tìm kiếm">
                                         </div>
                                     </div>
                                 </form>
